<resources>
    <string name="app_name">Note Calendar 2022</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="Mo">Mo</string>
    <string name="Tu">Tu</string>
    <string name="We">We</string>
    <string name="Th">Th</string>
    <string name="Fr">Fr</string>
    <string name="Sa">Sa</string>
    <string name="Su">Su</string>
    <string name="add">Add note</string>
    <string name="save">Save</string>
    <string name="write">Write here ...</string>
    <string name="error">"Write your note "</string>
</resources>