<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:shadowColor="@color/gray"
        android:shadowRadius="10"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="676dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightblue"
                android:padding="5dp"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:text="@string/January"
                android:textAlignment="center"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/March"
                android:textAlignment="center"
                android:textSize="28sp"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightblue"
                android:padding="5dp"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/May"
                android:textAlignment="center"
                android:textSize="28sp"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightblue"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/July"
                android:textAlignment="center"
                android:textSize="28sp"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightblue"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/September"
                android:textAlignment="center"
                android:textSize="28sp"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightblue"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/November"
                android:textAlignment="center"
                android:textSize="28sp"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightblue"
                android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/February"
                android:textAlignment="center"
                android:textSize="28sp"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:layout_marginTop="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightblue"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/April"
                android:textAlignment="center"
                android:textSize="28sp"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightblue"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/June"
                android:textAlignment="center"
                android:textSize="28sp"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightblue"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/August"
                android:textAlignment="center"
                android:textSize="28sp"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightblue"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/October"
                android:textAlignment="center"
                android:textSize="28sp"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightblue"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/December"
                android:textAlignment="center"
                android:textSize="28sp"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightblue"
                android:padding="5dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>